Feat: add home admin commands
Added configurable home admin commands: `/home <player> <name>` and
`/home list <player>`

For admins to be able to search offline players a cache of <Username,
UUID> was added. This can be op-out by setting `offlinePlayerCache` to
`false` in the config.

This is needed since you are unable to get the correct UUID for players
that are not currently connected to the server.